fix: align content

--- a/src/new-components/profile/profile.module.css
+++ b/src/new-components/profile/profile.module.css
@@ -22,9 +22,8 @@ li {
 .content {
 	position: relative;
 	flex: 0 0 83.3333%;
-	max-width: 83.3333%;
+	max-width: 70.88%;
 	min-height: 1px;
-	margin-left: 8.3333%;
 	padding-right: 15px;
 	padding-left: 15px;
 }
